--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "@types/node": "^18.17.1",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "13.5.6",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.0.5",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.4"
